-motion 도입 및 원 페이지 스크롤 구현

--- a/src/assets/styles/base/_typography.scss
+++ b/src/assets/styles/base/_typography.scss
@@ -21,25 +21,28 @@
   basic typography
 
 ------ */
-html {
-	font-family: 'Pretendard-variable', sans-serif;
-	line-height: 1.45;
-	letter-spacing: -0.025em;
-	word-spacing: -0.025em;
-	overflow-wrap: break-word;
-	color: var(--black-color-normal);
 
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	-webkit-text-size-adjust: 100%; /* chrome, safari, opera */
-	-ms-text-size-adjust: 100%; // IE
-	-moz-text-size-adjust: 100%; // firefox
-	-o-text-size-adjust: 100%; // opera 구버전
-}
+@layer base {
+	html {
+		font-family: 'Pretendard-variable', sans-serif;
+		line-height: 1.45;
+		letter-spacing: -0.025em;
+		word-spacing: -0.025em;
+		overflow-wrap: break-word;
+		color: var(--black-color-normal);
 
-a {
-	color: inherit;
-	// color: var(--black-color-normal);
+		-webkit-font-smoothing: antialiased;
+		-moz-osx-font-smoothing: grayscale;
+		-webkit-text-size-adjust: 100%; /* chrome, safari, opera */
+		-ms-text-size-adjust: 100%; // IE
+		-moz-text-size-adjust: 100%; // firefox
+		-o-text-size-adjust: 100%; // opera 구버전
+	}
+
+	a {
+		color: inherit;
+		// color: var(--black-color-normal);
+	}
 }
 
 /* 
