-tailwind css reset 제거

--- a/src/assets/styles/base/_css_variables.scss
+++ b/src/assets/styles/base/_css_variables.scss
@@ -10,4 +10,12 @@
 	--header-layout-sm: #{$header-layout-sm};
 	--header-layout-md: #{$header-layout-md};
 	--header-layout-lg: #{$header-layout-lg};
+
+	@include desktop {
+		--inner: 7vw;
+	}
+
+	@include tablet {
+		--inner: 10vw;
+	}
 }
