--- a/src/assets/styles/base/_reset.scss
+++ b/src/assets/styles/base/_reset.scss
@@ -5,6 +5,12 @@
 ====== */
 
 @layer base {
+	* {
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
+	}
+
 	body {
 		height: 100%;
 	}
@@ -72,6 +78,13 @@
 		color: inherit;
 	}
 
+	button,
+	input,
+	select,
+	textarea {
+		font: inherit;
+	}
+
 	canvas,
 	img,
 	picture,
@@ -84,6 +97,9 @@
 	/* IE10 이상에서 input box 에 추가된 지우기 버튼 제거 */
 	// input::-ms-clear { display: none; }
 
+	input {
+		min-width: 0px;
+	}
 	// input number
 	input[type='number']::-webkit-inner-spin-button,
 	input[type='number']::-webkit-outer-spin-button {
@@ -96,12 +112,12 @@
 		appearance: textfield;
 		-moz-appearance: textfield; // firefox
 	}
-}
 
-input[type='date']::-webkit-calendar-picker-indicator,
-input[type='time']::-webkit-calendar-picker-indicator,
-input[type='month']::-webkit-calendar-picker-indicator,
-input[type='week']::-webkit-calendar-picker-indicator,
-input[type='datetime-local']::-webkit-calendar-picker-indicator {
-	display: none;
+	input[type='date']::-webkit-calendar-picker-indicator,
+	input[type='time']::-webkit-calendar-picker-indicator,
+	input[type='month']::-webkit-calendar-picker-indicator,
+	input[type='week']::-webkit-calendar-picker-indicator,
+	input[type='datetime-local']::-webkit-calendar-picker-indicator {
+		display: none;
+	}
 }
