--- a/src/assets/styles/base/_layout.scss
+++ b/src/assets/styles/base/_layout.scss
@@ -2,7 +2,7 @@
 body {
 	width: 100%;
 	user-select: none;
-	background-color: var(--white-color);
+	background-color: var(--color-white);
 }
 
 .wrapper {
