--- a/src/assets/styles/base/_reset.scss
+++ b/src/assets/styles/base/_reset.scss
@@ -9,6 +9,7 @@
 		margin: 0;
 		padding: 0;
 		box-sizing: border-box;
+		cursor: none !important;
 	}
 
 	body {
@@ -74,7 +75,6 @@
 		background: inherit;
 		box-shadow: none;
 		border-radius: 0;
-		cursor: pointer;
 		color: inherit;
 	}
 
