-RollupButton, Image 컴포넌트 추가

--- a/src/assets/styles/base/_layout.scss
+++ b/src/assets/styles/base/_layout.scss
@@ -1,8 +1,8 @@
 // global
-body {
+html {
 	width: 100%;
 	user-select: none;
-	background-color: var(--color-white);
+	background-color: var(--color-surface-01);
 }
 
 .wrapper {
