--- a/src/assets/styles/base/_typography.scss
+++ b/src/assets/styles/base/_typography.scss
@@ -167,7 +167,7 @@
 		letter-spacing: -0.025em;
 		word-spacing: -0.025em;
 		overflow-wrap: break-word;
-		color: var(--black-color-normal);
+		color: var(--color-gray-950);
 
 		-webkit-font-smoothing: antialiased;
 		-moz-osx-font-smoothing: grayscale;
