--- a/src/assets/styles/base/tailwind.css
+++ b/src/assets/styles/base/tailwind.css
@@ -52,6 +52,7 @@
 	--font-heebo: 'Heebo';
 	--font-bebasNeue: 'BebasNeue';
 	--font-markMyWords: 'MarkMyWords';
+	--font-jalnan: 'Jalnan2';
 
 	--text-headline-1: 1.5rem;
 	--text-headline-1--font-weight: 700;
