--- a/src/assets/styles/base/_layout.scss
+++ b/src/assets/styles/base/_layout.scss
@@ -1,35 +1,37 @@
-// global
-html {
-	width: 100%;
-	user-select: none;
-	background-color: var(--color-surface-01);
-}
-
-.wrapper {
-	min-height: 100svh;
-}
-
-.inner {
-	padding-right: var(--inner);
-	padding-left: var(--inner);
-	@include layout-width;
-}
-
-.layout-width {
-	@include layout-width;
-}
-
-.ios-safe {
-	&-pb {
-		padding-bottom: ios-safe-area(bottom);
+@layer utilities {
+	// global
+	html {
+		width: 100%;
+		user-select: none;
+		background-color: var(--color-surface-01);
 	}
-	&-pt {
-		padding-top: ios-safe-area(top);
+
+	.wrapper {
+		min-height: 100svh;
 	}
-	&-pr {
-		padding-right: ios-safe-area(right);
+
+	.inner {
+		padding-right: var(--inner);
+		padding-left: var(--inner);
+		@include layout-width;
 	}
-	&-pl {
-		padding-left: ios-safe-area(left);
+
+	.layout-width {
+		@include layout-width;
+	}
+
+	.ios-safe {
+		&-pb {
+			padding-bottom: ios-safe-area(bottom);
+		}
+		&-pt {
+			padding-top: ios-safe-area(top);
+		}
+		&-pr {
+			padding-right: ios-safe-area(right);
+		}
+		&-pl {
+			padding-left: ios-safe-area(left);
+		}
 	}
 }
