--- a/src/assets/styles/pages/project.scss
+++ b/src/assets/styles/pages/project.scss
@@ -14,7 +14,7 @@
 			flex-wrap: wrap;
 			justify-content: space-between;
 			align-items: flex-end;
-			row-gap: 12px;
+			row-gap: 0.75rem;
 			margin-top: 2.5vw;
 
 			.tab-menu {
@@ -34,13 +34,18 @@
 
 			.grid-button-wrap {
 				display: flex;
-				gap: 6px;
+				gap: 0.375rem;
 				.icon-button {
-					width: 36px;
-					height: 36px;
-					border: 1px solid var(--color-gray-200);
-					border-radius: 6px;
+					width: 2.25rem;
+					height: 2.25rem;
+					padding: 0.125rem;
+					border: 1px solid var(--color-gray-300);
+					border-radius: 0.375rem;
 					overflow: hidden;
+
+					&.active {
+						border: 1px solid var(--color-gray-700);
+					}
 				}
 			}
 		}
@@ -71,7 +76,7 @@
 
 		&.grid-cols-3 {
 			grid-template-columns: repeat(3, 1fr);
-			gap: 15vh 3.4vw;
+			gap: 20vh 3.4vw;
 
 			.project-item {
 				&:nth-child(3n + 1) {
