--- a/src/components/common/Divider/Divider.module.scss
+++ b/src/components/common/Divider/Divider.module.scss
@@ -3,6 +3,7 @@
 		.line {
 			display: block;
 			height: 100%;
+			background-color: inherit;
 		}
 	}
 
@@ -12,10 +13,10 @@
 	}
 
 	// color
-	.light .line {
+	.light {
 		background-color: var(--color-gray-200);
 	}
-	.dark .line {
+	.dark {
 		background-color: var(--color-gray-400);
 	}
 
