--- a/src/assets/styles/base/_typography.scss
+++ b/src/assets/styles/base/_typography.scss
@@ -166,6 +166,7 @@
 		line-height: 1.45;
 		letter-spacing: -0.025em;
 		word-spacing: -0.025em;
+		word-break: keep-all;
 		overflow-wrap: break-word;
 		color: var(--color-gray-950);
 
