--- a/src/assets/styles/pages/detail.scss
+++ b/src/assets/styles/pages/detail.scss
@@ -1,25 +1,134 @@
-.detail-section {
-	.project-detail-left-top {
-		h5 {
-			color: var(--color-gray-400);
-			font-weight: 300;
+.detail-page {
+	.visual-wrap {
+		width: 100%;
+		height: 80svh;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+		@media (min-width: 768px) {
+			min-height: 100svh;
+			padding-top: 50vh;
 		}
 
-		p {
-			color: var(--color-gray-900);
+		.visual {
+			position: relative;
+			width: 100%;
+			height: 100%;
+			overflow: hidden;
+			background-repeat: no-repeat;
+			background-position: center top;
+			background-attachment: fixed;
+			background-size: cover;
+
+			.project-slogan {
+				position: absolute;
+				top: 50%;
+				left: 0;
+				font-family: 'BebasNeue', sans-serif;
+				font-size: 16vw;
+				color: white;
+				white-space: nowrap;
+				mix-blend-mode: difference;
+				transition: transform linear 2400ms;
+			}
 		}
 	}
 
-	.project-brief,
-	.project-concept {
-		h5 {
-			font-size: clamp(13px, 1.823vw, 15px);
-			font-weight: 600;
+	.basic-info-section {
+		margin-top: 24px;
+
+		header {
+			.title {
+				font-size: 28px;
+				font-weight: 700;
+			}
 		}
 
-		p {
-			font-size: clamp(14px, 1.563vw, 18px);
-			font-weight: 300;
+		.section-body {
+			@include md {
+				display: flex;
+			}
 		}
+
+		.project-detail-left-top {
+			display: grid;
+			grid-template-columns: 1fr 2.5fr;
+			row-gap: 8px;
+
+			.sub-title {
+				color: var(--color-gray-400);
+				font-weight: 300;
+
+				+ p {
+					color: var(--color-gray-900);
+				}
+			}
+
+			p {
+				display: flex;
+				gap: 8px;
+			}
+		}
+
+		.project-tasks {
+			margin-top: 4vw;
+
+			.sub-title {
+				color: var(--color-gray-400);
+				font-weight: 300;
+			}
+
+			.link-wrap {
+				li {
+					display: flex;
+					gap: 5px;
+
+					&:not(:first-child) {
+						margin-top: 4px;
+					}
+				}
+			}
+		}
+
+		.project-brief,
+		.project-concept {
+			color: var(--color-gray-900);
+
+			h5 {
+				color: var(--color-gray-400);
+				font-weight: 300;
+			}
+
+			p {
+				font-size: clamp(14px, 1.563vw, 18px);
+				font-weight: 300;
+			}
+		}
+
+		.project-brief {
+			.divider {
+				margin-top: clamp(4px, 7.997px, 9px);
+				margin-bottom: clamp(4px, 7.997px, 9px);
+				background-color: var(--color-gray-800);
+			}
+		}
+
+		.project-concept {
+			margin-top: 3vw;
+
+			h5 {
+				margin-top: clamp(4px, 7.997px, 9px);
+				margin-bottom: clamp(4px, 7.997px, 9px);
+			}
+
+			.divider {
+				background-color: var(--color-gray-800);
+			}
+		}
+	}
+
+	.detail-not-found {
+		padding-bottom: 12vh;
 	}
 }
