--- a/src/assets/styles/pages/detail.scss
+++ b/src/assets/styles/pages/detail.scss
@@ -1,14 +1,20 @@
 .detail-page {
+	@mixin title-sm {
+		@include title-1;
+		font-weight: 300;
+		color: var(--color-gray-500);
+	}
+
 	.visual-wrap {
 		width: 100%;
-		height: 80svh;
+		height: 75svh;
 		display: flex;
 		justify-content: center;
 		align-items: center;
 
-		@media (min-width: 768px) {
-			min-height: 100svh;
-			padding-top: 50vh;
+		@include md {
+			padding-top: 50svh;
+			height: 100%;
 		}
 
 		.visual {
@@ -21,10 +27,15 @@
 			background-attachment: fixed;
 			background-size: cover;
 
+			@include md {
+				height: 100svh;
+			}
+
 			.project-slogan {
 				position: absolute;
 				top: 50%;
 				left: 0;
+				transform: translateY(-50%);
 				font-family: 'BebasNeue', sans-serif;
 				font-size: 16vw;
 				color: white;
@@ -35,95 +46,146 @@
 		}
 	}
 
+	.project-header {
+		margin-top: 1.125rem;
+		padding-right: var(--inner);
+		padding-left: var(--inner);
+	}
+
+	.project-name {
+		font-size: 28px;
+		font-weight: 700;
+	}
+
 	.basic-info-section {
-		margin-top: 24px;
-
-		header {
-			.title {
-				font-size: 28px;
-				font-weight: 700;
-			}
-		}
-
+		margin-top: 12px;
 		.section-body {
 			@include md {
 				display: flex;
 			}
 		}
 
-		.project-detail-left-top {
+		.box {
 			display: grid;
 			grid-template-columns: 1fr 2.5fr;
 			row-gap: 8px;
 
+			~ .box {
+				margin-top: 12px;
+			}
+
 			.sub-title {
-				color: var(--color-gray-400);
-				font-weight: 300;
+				@include title-sm;
 
 				+ p {
+					display: flex;
+					gap: 8px;
+					@include body-1;
 					color: var(--color-gray-900);
 				}
 			}
 
-			p {
-				display: flex;
-				gap: 8px;
+			&.link-box {
+				.link-wrap {
+					li {
+						display: flex;
+						gap: 8px;
+
+						~ li {
+							margin-top: 6px;
+						}
+					}
+				}
 			}
-		}
 
-		.project-tasks {
-			margin-top: 4vw;
+			&.desc-box {
+				display: block;
+				margin-top: 24px;
+				color: var(--color-gray-900);
 
-			.sub-title {
-				color: var(--color-gray-400);
-				font-weight: 300;
-			}
+				.row {
+					~ .row {
+						margin-top: 24px;
+					}
+					.sub-title {
+						color: var(--color-gray-400);
+						font-weight: 300;
+					}
 
-			.link-wrap {
-				li {
-					display: flex;
-					gap: 5px;
+					.text {
+						@include body-2;
+					}
 
-					&:not(:first-child) {
-						margin-top: 4px;
+					.divider {
+						margin: 5px 0 12px;
+						background-color: var(--color-gray-300);
 					}
 				}
 			}
 		}
+	}
 
-		.project-brief,
-		.project-concept {
-			color: var(--color-gray-900);
+	.spec-section {
+		margin-top: 32px;
 
-			h5 {
+		.box {
+			~ .box {
+				margin-top: 18px;
+			}
+
+			.sub-title {
+				@include title-sm;
+			}
+
+			.text-wrap {
+				display: flex;
+				flex-wrap: wrap;
+				margin-top: 6px;
+				@include body-3;
+
+				li {
+					&:not(:last-child) {
+						margin-right: 3px;
+						&::after {
+							content: ',';
+						}
+					}
+				}
+			}
+		}
+	}
+
+	.feature-section {
+		margin-top: 52px;
+		.section-title {
+			font-size: 22px;
+			font-weight: 600;
+		}
+
+		.section-body {
+			margin-top: 17px;
+		}
+
+		article {
+			~ article {
+				margin-top: 32px;
+			}
+
+			.feature-img {
+				border: 1px solid var(--color-gray-300);
+				border-radius: 18px;
+				overflow: hidden;
+			}
+			> .title {
+				margin-top: 16px;
+				@include title-3;
 				color: var(--color-gray-400);
-				font-weight: 300;
 			}
 
-			p {
-				font-size: clamp(14px, 1.563vw, 18px);
-				font-weight: 300;
-			}
-		}
-
-		.project-brief {
-			.divider {
-				margin-top: clamp(4px, 7.997px, 9px);
-				margin-bottom: clamp(4px, 7.997px, 9px);
-				background-color: var(--color-gray-800);
-			}
-		}
-
-		.project-concept {
-			margin-top: 3vw;
-
-			h5 {
-				margin-top: clamp(4px, 7.997px, 9px);
-				margin-bottom: clamp(4px, 7.997px, 9px);
-			}
-
-			.divider {
-				background-color: var(--color-gray-800);
+			> .desc {
+				margin-top: 8px;
+				@include body-2;
+				white-space: pre-wrap;
 			}
 		}
 	}
