--- a/src/assets/styles/pages/detail.scss
+++ b/src/assets/styles/pages/detail.scss
@@ -1,8 +1,12 @@
 .detail-page {
 	@mixin title-sm {
-		@include title-1;
+		@include title-2;
 		font-weight: 300;
 		color: var(--color-gray-500);
+
+		@include md {
+			@include title-1;
+		}
 	}
 
 	.visual-wrap {
@@ -47,13 +51,13 @@
 	}
 
 	.project-header {
-		margin-top: 1.125rem;
+		margin-top: 18px;
 		padding-right: var(--inner);
 		padding-left: var(--inner);
 	}
 
 	.project-name {
-		font-size: 28px;
+		font-size: 24px;
 		font-weight: 700;
 	}
 
@@ -68,7 +72,7 @@
 		.box {
 			display: grid;
 			grid-template-columns: 1fr 2.5fr;
-			row-gap: 8px;
+			row-gap: 10px;
 
 			~ .box {
 				margin-top: 12px;
@@ -80,12 +84,18 @@
 				+ p {
 					display: flex;
 					gap: 8px;
-					@include body-1;
+					@include body-3;
 					color: var(--color-gray-900);
+
+					@include md {
+						@include body-1;
+					}
 				}
 			}
 
 			&.link-box {
+				margin-top: 16px;
+
 				.link-wrap {
 					li {
 						display: flex;
@@ -113,7 +123,11 @@
 					}
 
 					.text {
-						@include body-2;
+						@include body-3;
+
+						@include md {
+							@include body-2;
+						}
 					}
 
 					.divider {
@@ -128,9 +142,21 @@
 	.spec-section {
 		margin-top: 32px;
 
+		.inner {
+			@include lg {
+				display: grid;
+				grid-template-columns: repeat(2, 1fr);
+				gap: 22px 0;
+			}
+		}
+
 		.box {
 			~ .box {
-				margin-top: 18px;
+				margin-top: 16px;
+			}
+
+			&:first-of-type {
+				grid-row: span 3;
 			}
 
 			.sub-title {
@@ -140,12 +166,12 @@
 			.text-wrap {
 				display: flex;
 				flex-wrap: wrap;
-				margin-top: 6px;
+				margin-top: 5px;
 				@include body-3;
 
 				li {
 					&:not(:last-child) {
-						margin-right: 3px;
+						margin-right: 5px;
 						&::after {
 							content: ',';
 						}
@@ -158,15 +184,23 @@
 	.feature-section {
 		margin-top: 52px;
 		.section-title {
-			font-size: 22px;
+			font-size: 20px;
 			font-weight: 600;
 		}
 
 		.section-body {
 			margin-top: 17px;
+			@include md {
+				display: grid;
+				grid-template-columns: repeat(2, 1fr);
+			}
 		}
 
 		article {
+			&:first-child {
+				grid-column: span 2;
+			}
+
 			~ article {
 				margin-top: 32px;
 			}
@@ -175,17 +209,32 @@
 				border: 1px solid var(--color-gray-300);
 				border-radius: 18px;
 				overflow: hidden;
+				max-height: 40vh;
+
+				img {
+					width: 100%;
+					height: 100%;
+					max-height: inherit;
+					object-fit: contain;
+				}
 			}
 			> .title {
 				margin-top: 16px;
-				@include title-3;
+				@include title-4;
+
 				color: var(--color-gray-400);
 			}
 
 			> .desc {
 				margin-top: 8px;
-				@include body-2;
-				white-space: pre-wrap;
+				@include body-3;
+				font-weight: 400;
+
+				> li {
+					~ li {
+						margin-top: 4px;
+					}
+				}
 			}
 		}
 	}
