-blog 디자인 변경

--- a/src/assets/styles/pages/project.scss
+++ b/src/assets/styles/pages/project.scss
@@ -1,7 +1,5 @@
 .project-page {
-	padding-top: 12vh;
-	padding-bottom: 24vh;
-
+	padding-top: 12vw;
 	.main-header {
 		.page-title {
 			font-size: clamp(32px, 7.292vw, 82px);
